# GroupControl

./: CMakeLists.txt  README.md  package.xml
cmake/: FindCoppeliaSim.cmake
include/copMatlab/: copCar.h  copCarEnhanced.h  extApi.h  extApiPlatform.h  velocity_controller.h
launch/: alloc.launch  start.launch
src/: copAlloc.cc  copMatlab.cpp  copTest.cpp
world/: copMatlab.ttt  copMatlab2.ttt
